The Hexagon October 2020

--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -38,6 +38,10 @@
         </thead>
         <tbody>
             <tr>
+              <td>October 2020</a></td>
+              <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_October_2020.pdf') }}" target="_blank">The Hexagon October 2020</a></td>
+            </tr>
+            <tr>
               <td>September 2020</a></td>
               <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_September_2020.pdf') }}" target="_blank">The Hexagon September 2020</a></td>
             </tr>
