--- a/templates/vueleaderboardupdate.html
+++ b/templates/vueleaderboardupdate.html
@@ -18,7 +18,7 @@
 </section>
 <body>
   <div>
-    <h3 style="margin-left: 100px; color: gray">My Quasar Journey</h3>
+    <h3 style="margin-left: 100px; color: gray">My JavaSript Journey</h3>
     <form method="POST" action="{{ url_for('vueleaderboardupdate') }}">
       <table style="font-size: 12px; margin-left: 100px">
         <tr>
