November newsletter plus various minor modifications

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,15 +46,13 @@
             for their work or business. It can be as simple as brochure websites or as complex as business 
             process workflow applications. We offer pay-you-feel model to help beginners gain real-world paid experience.</p>
         </div>
-       
+
         <div class="col-md-4 mb-4 text-center">
           <img src="{{ url_for('static', filename='img/002-checklist.png') }}" width="80px" class="mb-2 img-fluid">
-          <h4>Address Validation</h4>
-          <p class="service-text">We use Mastersoft Group's Harmony software to help customers in Australia and New Zealand cleanse
-              and deduplicate address data as part of their customer information data quality initiative in the 
-              organisation.</p>
+          <h4>Study Groups</h4>
+          <p class="service-text">We regularly organise study groups for the community covering new and existing topics around programming languages and frameworks.</p>
         </div>
-
+      
         <div class="col-md-4 mb-4 text-center">
           <img src="{{ url_for('static', filename='img/003-man.png') }}" width="80px" class="mb-2 img-fluid">
           <h4>Free Consultation</h4>
@@ -95,7 +93,7 @@
               <h5 class="text-muted">Director</h5>
               <p class="team-text">Engramar's raison d'etre is to serve. A believer of servant leadership. He is passionate in providing service excellence to customers and ensuring people, culture, processes and technology support the same initiative.
 Engramar has worked in the IT industry for over 24 years. Having worked in Asia, the Middle East and Australia, Engramar has deep expertise in all aspects of software development lifecycle including business requirements analysis, systems design and development, product testing, release management, end-user training, pre-sales and post-implementation support.
-Engramar is working for GBG (Mastersoft Group) as their Head of Customer Support and Testing team. Engramar is also the current Director of Code.Sydney, an organisation which helps beginner programmers and novice data analysts showcase their newfound skills. Engramar has obtained a degree in Mathematics major in Computer Science from the Pontifical and Royal University of Santo Tomas in Manila.</p>
+Engramar is working for GBG (Loqate) as Head of Customer Support. Engramar is also the current Director of Code.Sydney, an organisation which helps beginner programmers and novice data analysts showcase their newfound skills. Engramar has obtained a degree in Mathematics major in Computer Science from the Pontifical and Royal University of Santo Tomas in Manila.</p>
               <div class="d-flex justify-content-center">
                 <div class="p-4">
                   <a href="https://www.linkedin.com/in/engramarbollas/" target="_blank">
@@ -274,42 +272,6 @@ Qj can usually be found deep in some obscure documentation or sharing his knowle
 
   </section>
 
-
-  <!-- Mentors Section 3 
-  <div class="spacing"></div>    
-
-  <section id="authors" class="my-5 text-center bg-light">
-
-    <div class="container">
-      <div class="row">
-
-        <div class="col-lg-3 col-md-6">
-          <div class="card h-100">
-            <div class="card-body">
-
-              <img src="{{ url_for('static', filename='img/surya.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
-              <h4>Surya Setiyaputra</h4>
-              <h5 class="text-muted">Software Engineer</h5>
-              <p class="team-text">Surya is a full-stack software developer with more than three-year professional experience with a previous life as a research scientist in Biophysics. He is a self-described ‘generalist’ with practical experience in setting up small businesses, personal finance, design, community building and tech startup in both Australia and Indonesia. Since mid-2019, Surya has been an active contributor to Free Code Camp Sydney meetups. As a self-taught developer, he is particularly interested in helping new coders who are interested in landing their entry role as a Junior Developer after going through the FreeCodeCamp full-stack curriculum. His current favourite web development stacks are Kotlin/Spring Boot, Ruby on Rails, Node, ReactJS and VueJS. In the near future, he aims to learn more SQL and functional programming. When he is not coding, Surya likes to read books about economics, anthropology, history and politics.</p>
-              <div class="d-flex justify-content-center">
-                <div class="p-4">
-                  <a href="https://au.linkedin.com/in/suryast" target="_blank">
-                    <i class="fab fa-linkedin"></i>
-                  </a>
-                </div>
-              </div>
-
-
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </div>
-
-  </section>
-  -->
-
   <div class="spacing"></div>
 
   <!-- Friends -->
@@ -331,14 +293,6 @@ Qj can usually be found deep in some obscure documentation or sharing his knowle
     <section id="home-icons" class="py-5 move-up-more bg-light">
       <div class="container">
         <div class="row">
-
-          <div class="col-md-4 mb-4 text-center">
-            <img src="{{ url_for('static', filename='img/mastersoft.png') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
-            <h4><a href="https://www.mastersoftgroup.com/" target="_blank">Mastersoft Group</a></h4>
-            <p class="service-text">Mastersoft Group (a GBG company) is behind the development of Harmony software. Mastersoft has been a leading provider of data quality
-              and address validation software services to blue-chip companies and government 
-              agencies across Australia and New Zealand for over 35 years.</p>
-          </div>
 
           <div class="col-md-4 mb-4 text-center">
             <img src="{{ url_for('static', filename='img/fcc.png') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
