--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,7 @@
           <div class="col">
             <div class="mb-5">
               <h1 class="text-primary pb-3 mt-5">
-                Centres of Excellence
+                Mentors
               </h1>
             </div>
           </div>
@@ -110,7 +110,7 @@ Engramar is working for GBG (Loqate) as Head of Customer Support. Engramar is al
             <div class="card-body">
               <img src="{{ url_for('static', filename='img/tony.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
               <h4>Tony Johnson</h4>
-              <h5 class="text-muted">Head of JavaScript CoE</h5>
+              <h5 class="text-muted">Mentor</h5>
               <p class="team-text">Despite having a Degree in Prehistory and Archaeology, Tony has survived 30 years in various IT 
                 careers; from hardware sales and service, support desk, linux systems administration, 
                 management, consultancy, and software development. 
@@ -137,7 +137,7 @@ Engramar is working for GBG (Loqate) as Head of Customer Support. Engramar is al
             <div class="card-body">
               <img src="{{ url_for('static', filename='img/promie_new.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
               <h4>Promie Yutasane</h4>
-              <h5 class="text-muted">Head of Vue CoE</h5>
+              <h5 class="text-muted">Mentor</h5>
               <p class="team-text">Promie is currently working as a Software Engineer at Hireup, a tech company with an online platform that connects people with disability with support workers. 
                 He has a very strong focus on full stack development and currently using NodeJS, MongoDB, GraphQL/Apollo, React and Vue. 
                 He is a part-time student at UNSW studying Masters of IT specialising in Artificial Intelligence and E-Commerce Systems. 
@@ -160,7 +160,7 @@ Engramar is working for GBG (Loqate) as Head of Customer Support. Engramar is al
             <div class="card-body">
               <img src="{{ url_for('static', filename='img/kevin.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
               <h4>Kevin Foong</h4>
-              <h5 class="text-muted">Head of Flask CoE</h5>
+              <h5 class="text-muted">Mentor</h5>
               <p class="team-text">Kevin has over 20 years of working experience in a variety of IT related areas including software development, web design and information management. The latter in the area of library and information science. He is currently working as a System Administrator for NSW Health where he mainly utilises SQL for report generation. He recently started learning Python, at first because he wanted to get into data science, but then found Flask along the way. He now considers himself a Python and Flask enthusiast and is interested in sharing his knowledge and learning from others.</p>
               <div class="d-flex justify-content-center">
                 <div class="p-4">
@@ -191,7 +191,7 @@ Engramar is working for GBG (Loqate) as Head of Customer Support. Engramar is al
 
               <img src="{{ url_for('static', filename='img/surya.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
               <h4>Surya Setiyaputra</h4>
-              <h5 class="text-muted">Head of React CoE</h5>
+              <h5 class="text-muted">Mentor</h5>
               <p class="team-text">Surya is a full-stack software developer with more than three-year professional experience with a previous life as a research scientist in Biophysics. He is a self-described ‘generalist’ with practical experience in setting up small businesses, personal finance, design, community building and tech startup in both Australia and Indonesia. Since mid-2019, Surya has been an active contributor to Free Code Camp Sydney meetups. As a self-taught developer, he is particularly interested in helping new coders who are interested in landing their entry role as a Junior Developer after going through the FreeCodeCamp full-stack curriculum. His current favourite web development stacks are Kotlin/Spring Boot, Ruby on Rails, Node, ReactJS and VueJS. In the near future, he aims to learn more SQL and functional programming. When he is not coding, Surya likes to read books about economics, anthropology, history and politics.</p>
               <div class="d-flex justify-content-center">
                 <div class="p-4">
@@ -210,7 +210,7 @@ Engramar is working for GBG (Loqate) as Head of Customer Support. Engramar is al
             <div class="card-body">
               <img src="{{ url_for('static', filename='img/bin.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
               <h4>Bin Liu</h4>
-              <h5 class="text-muted">Head of Java CoE</h5>
+              <h5 class="text-muted">Mentor</h5>
               <p class="team-text">Bin has ten years working experience as a Software Developer and Business Intelligence consultant. His development career started with Java. Recently he is using some script languages like Python, Perl and JavaScript and actively participating as the lead developer of Census+ project. Bin has good sense in coding and is good at learning new technologies. He is interested in Python because it can be applied to many technological areas, such as web application development, data science and so on. He would like to make progress with others who are also interested in Python-related technologies.</p>
               <div class="d-flex justify-content-center">
                 <div class="p-4">
@@ -229,7 +229,7 @@ Engramar is working for GBG (Loqate) as Head of Customer Support. Engramar is al
             <div class="card-body">
               <img src="{{ url_for('static', filename='img/june.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
               <h4>June Kongyang</h4>
-              <h5 class="text-muted">Head of Python CoE</h5>
+              <h5 class="text-muted">Mentor</h5>
               <p class="team-text">June Kongyang is currently a design and development engineer. She has broad experience in design, development and testing of network security systems. June started coding using C and C++ for robotic control automation such as sensors and micro-controllers. June graduated with a masters degree in Electrical Engineering. She joined Code.Sydney due to her interest in both Python and JavaScript programming languages. She found both languages pretty handy on increasing work productivity. She is keen to share her knowledge to anyone who wants to learn coding.</p>
               <div class="d-flex justify-content-center">
                 <div class="p-4">
@@ -249,7 +249,7 @@ Engramar is working for GBG (Loqate) as Head of Customer Support. Engramar is al
             <div class="card-body">
               <img src="{{ url_for('static', filename='img/qj.jpg') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
               <h4>Qj Stout-Spykers</h4>
-              <h5 class="text-muted">Head of Data Structures and Algorithms CoE</h5>
+              <h5 class="text-muted">Mentor</h5>
               <p class="team-text">
                 Qj is a computer science graduate and achieved high distinctions in microprocessor systems, systems and database design, discrete mathematics and programming principles. His primary software development experience is in embedded systems, deep-learning and back-end engineering. Currently, he is constraining his focus to mastering full-stack web development, after which, he has his eye on studying project management.
 As a Code.Sydney volunteer, Qj has acted as a technical team lead and principal back-end engineer on the CodeSydney website rework and internal 'Strataly’ project respectively.
@@ -272,6 +272,46 @@ Qj can usually be found deep in some obscure documentation or sharing his knowle
 
   </section>
 
+
+    <!-- Mentors Section 3 -->
+    <div class="spacing"></div>    
+
+    <section id="authors" class="my-5 text-center bg-light">
+  
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-3 col-md-6">
+            <div class="card h-100">
+              <div class="card-body">
+  
+                <img src="{{ url_for('static', filename='img/gabriel.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
+                <h4>Gabriel Djan</h4>
+                <h5 class="text-muted">Mentor</h5>
+                <p class="team-text">
+                  Gabriel started her design career in a fire safety company as Information Designer, in charge of emergency evacuation diagram design and production for clients like Only About Children, AMF Bowling Group, MECCA to name a few. 
+                  She then left the Information Designer role for UX UI designer role to work for a company specialising in applications software design, programming, system configuration, engineering, installation, commissioning of Building Automation, Management Systems & Access Control Systems.
+                  She designed user interfaces, user experience, and data analytics for real live data IoT and SaaS applications for clients like Citigroup, Bennelong, Crown Group, WeWork, Sans Clinic, and Dematic.
+                  Her unique combination of experiences complementing the UX UI Designer role includes a Computer Science (Bachelor Degree -  Distinction) degree, digital design, and digital photography. She is a Tridium Niagara 4 Technical Certification Program (TCP) trained. 
+                  In her free time, she likes exploring investment vehicles/products.
+                </p>
+                <div class="d-flex justify-content-center">
+                  <div class="p-4">
+                    <a href="https://www.linkedin.com/in/gabrieltwd/" target="_blank">
+                      <i class="fab fa-linkedin"></i>
+                    </a>
+                  </div>
+                </div>
+  
+              </div>
+            </div>
+          </div>
+
+  
+        </div>
+      </div>
+  
+    </section>
+  
   <div class="spacing"></div>
 
   <!-- Friends -->
