Year 2021 Preparatory Changes

--- a/templates/awards.html
+++ b/templates/awards.html
@@ -100,7 +100,7 @@
 
       <div class="col-md-4 mb-4 text-center">
         <img
-          src="{{ url_for('static', filename='img/xmas2019.png') }}"
+          src="{{ url_for('static', filename='img/xmas2019.jpg') }}"
           class="mb-2 img-fluid"
         />
         <p class="service-text">End of year mentors lunch 2019</p>
