--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -24,31 +24,23 @@
           <a href="{{ url_for('index') }}" class="nav-link">Home</a>
         </li>
         <li class="nav-item">
-          <a href="{{ url_for('awards') }}" class="nav-link">Awards</a>
+          <a href="{{ url_for('volunteering') }}" class="nav-link">Volunteering</a>
         </li>
         <li class="nav-item">
-          <a href="{{ url_for('testimonials') }}" class="nav-link"
-            >Testimonials</a
-          >
+          <a href="{{ url_for('awards') }}" class="nav-link">Awards</a>
         </li>
-        <!--
-      <li class="nav-item">
-        <a href="{{ url_for('fellowship') }}" class="nav-link">Fellowship</a>
-      </li>
-      -->
         <li class="nav-item">
           <a href="{{ url_for('newsletter') }}" class="nav-link">Newsletter</a>
         </li>
         <li class="nav-item">
-          <a href="{{ url_for('microbootcamp') }}" class="nav-link"
-            >JS Study Group</a
-          >
+          <a href="{{ url_for('microbootcamp') }}" class="nav-link">JS Study Group</a>
         </li>
-        <!--
         <li class="nav-item">
-          <a href="{{ url_for('fccleaderboard') }}" class="nav-link">Campers</a>
+          <a href="{{ url_for('merch') }}" class="nav-link">Merch</a>
         </li>
-         -->
+        <li class="nav-item">
+          <a href="{{ url_for('support') }}" class="nav-link">Support Us</a>
+        </li>
         <li class="nav-item">
           <a href="{{ url_for('contact') }}" class="nav-link">Contact</a>
         </li>
