--- a/templates/index.html
+++ b/templates/index.html
@@ -38,25 +38,26 @@
   <section id="home-icons" class="py-5 move-up bg-light">
     <div class="container">
       <div class="row">
-       
+
+        <div class="col-md-4 mb-4 text-center">
+          <img src="{{ url_for('static', filename='img/005-login.png') }}" width="80px" class="mb-2 img-fluid">
+          <h4>Supporting Non-Profits</h4>
+          <p class="service-text">We offer mentor-backed support for non-profit organisations and community groups around Australia for any bespoke app development needed to empower their operations. 
+            In return, it is our hope that NFPs can provide real-world project exposure to some of our volunteer beginners in aid of their career progression.</p>
+        </div>
+        
         <div class="col-md-4 mb-4 text-center">
           <img src="{{ url_for('static', filename='img/001-responsive.png') }}" width="80px" class="mb-2 img-fluid">
           <h4>Pay-as-you-feel Development</h4>
           <p class="service-text">We help individuals, startups and established organisations alike in building bespoke applications 
-            for their work or business. It can be as simple as brochure websites or as complex as business 
+            for their work or business. It can be as simple as brochure-type websites or as complex as business 
             process workflow applications. We offer pay-you-feel model to help beginners gain real-world paid experience.</p>
         </div>
 
         <div class="col-md-4 mb-4 text-center">
           <img src="{{ url_for('static', filename='img/002-checklist.png') }}" width="80px" class="mb-2 img-fluid">
           <h4>Study Groups</h4>
-          <p class="service-text">We regularly organise study groups for the community covering new and existing topics around programming languages and frameworks.</p>
-        </div>
-      
-        <div class="col-md-4 mb-4 text-center">
-          <img src="{{ url_for('static', filename='img/003-man.png') }}" width="80px" class="mb-2 img-fluid">
-          <h4>Free Consultation</h4>
-          <p class="service-text">Have a chat with us to discuss how we can help.</p>
+          <p class="service-text">We regularly organise study groups for complete beginners covering new and existing topics around popular programming languages and frameworks.</p>
         </div>
 
       </div>
@@ -108,7 +109,7 @@ Engramar is working for GBG (Loqate) as Head of Customer Support. Engramar is al
         <div class="col-lg-3 col-md-6">
           <div class="card h-100">
             <div class="card-body">
-              <img src="{{ url_for('static', filename='img/tony.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
+              <img src="{{ url_for('static', filename='img/tony.jpg') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
               <h4>Tony Johnson</h4>
               <h5 class="text-muted">Mentor</h5>
               <p class="team-text">Despite having a Degree in Prehistory and Archaeology, Tony has survived 30 years in various IT 
@@ -135,7 +136,7 @@ Engramar is working for GBG (Loqate) as Head of Customer Support. Engramar is al
         <div class="col-lg-3 col-md-6">
           <div class="card h-100">
             <div class="card-body">
-              <img src="{{ url_for('static', filename='img/promie_new.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
+              <img src="{{ url_for('static', filename='img/promie_new.jpg') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
               <h4>Promie Yutasane</h4>
               <h5 class="text-muted">Mentor</h5>
               <p class="team-text">Promie is currently working as a Software Engineer at Hireup, a tech company with an online platform that connects people with disability with support workers. 
@@ -158,7 +159,7 @@ Engramar is working for GBG (Loqate) as Head of Customer Support. Engramar is al
         <div class="col-lg-3 col-md-6">
           <div class="card h-100">
             <div class="card-body">
-              <img src="{{ url_for('static', filename='img/kevin.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
+              <img src="{{ url_for('static', filename='img/kevin.jpg') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
               <h4>Kevin Foong</h4>
               <h5 class="text-muted">Mentor</h5>
               <p class="team-text">Kevin has over 20 years of working experience in a variety of IT related areas including software development, web design and information management. The latter in the area of library and information science. He is currently working as a System Administrator for NSW Health where he mainly utilises SQL for report generation. He recently started learning Python, at first because he wanted to get into data science, but then found Flask along the way. He now considers himself a Python and Flask enthusiast and is interested in sharing his knowledge and learning from others.</p>
@@ -189,7 +190,7 @@ Engramar is working for GBG (Loqate) as Head of Customer Support. Engramar is al
           <div class="card h-100">
             <div class="card-body">
 
-              <img src="{{ url_for('static', filename='img/surya.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
+              <img src="{{ url_for('static', filename='img/surya.jpg') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
               <h4>Surya Setiyaputra</h4>
               <h5 class="text-muted">Mentor</h5>
               <p class="team-text">Surya is a full-stack software developer with more than three-year professional experience with a previous life as a research scientist in Biophysics. He is a self-described ‘generalist’ with practical experience in setting up small businesses, personal finance, design, community building and tech startup in both Australia and Indonesia. Since mid-2019, Surya has been an active contributor to Free Code Camp Sydney meetups. As a self-taught developer, he is particularly interested in helping new coders who are interested in landing their entry role as a Junior Developer after going through the FreeCodeCamp full-stack curriculum. His current favourite web development stacks are Kotlin/Spring Boot, Ruby on Rails, Node, ReactJS and VueJS. In the near future, he aims to learn more SQL and functional programming. When he is not coding, Surya likes to read books about economics, anthropology, history and politics.</p>
@@ -208,7 +209,7 @@ Engramar is working for GBG (Loqate) as Head of Customer Support. Engramar is al
         <div class="col-lg-3 col-md-6">
           <div class="card h-100">
             <div class="card-body">
-              <img src="{{ url_for('static', filename='img/bin.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
+              <img src="{{ url_for('static', filename='img/bin.jpg') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
               <h4>Bin Liu</h4>
               <h5 class="text-muted">Mentor</h5>
               <p class="team-text">Bin has ten years working experience as a Software Developer and Business Intelligence consultant. His development career started with Java. Recently he is using some script languages like Python, Perl and JavaScript and actively participating as the lead developer of Census+ project. Bin has good sense in coding and is good at learning new technologies. He is interested in Python because it can be applied to many technological areas, such as web application development, data science and so on. He would like to make progress with others who are also interested in Python-related technologies.</p>
@@ -227,7 +228,7 @@ Engramar is working for GBG (Loqate) as Head of Customer Support. Engramar is al
           <div class="card h-100">
 
             <div class="card-body">
-              <img src="{{ url_for('static', filename='img/june.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
+              <img src="{{ url_for('static', filename='img/june.jpg') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
               <h4>June Kongyang</h4>
               <h5 class="text-muted">Mentor</h5>
               <p class="team-text">June Kongyang is currently a design and development engineer. She has broad experience in design, development and testing of network security systems. June started coding using C and C++ for robotic control automation such as sensors and micro-controllers. June graduated with a masters degree in Electrical Engineering. She joined Code.Sydney due to her interest in both Python and JavaScript programming languages. She found both languages pretty handy on increasing work productivity. She is keen to share her knowledge to anyone who wants to learn coding.</p>
@@ -284,7 +285,7 @@ Qj can usually be found deep in some obscure documentation or sharing his knowle
             <div class="card h-100">
               <div class="card-body">
   
-                <img src="{{ url_for('static', filename='img/gabriel.png') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
+                <img src="{{ url_for('static', filename='img/gabriel.jpg') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
                 <h4>Gabriel Djan</h4>
                 <h5 class="text-muted">Mentor</h5>
                 <p class="team-text">
@@ -321,7 +322,7 @@ Qj can usually be found deep in some obscure documentation or sharing his knowle
           <div class="col">
             <div class="mb-5">
               <h1 class="text-primary pb-3 mt-5">
-                Friends
+                Supported Non-Profits and Friends
               </h1>
             </div>
           </div>
@@ -335,13 +336,25 @@ Qj can usually be found deep in some obscure documentation or sharing his knowle
         <div class="row">
 
           <div class="col-md-4 mb-4 text-center">
+            <img src="{{ url_for('static', filename='img/dccajs.png') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
+            <h4><a href="https://www.freecodecamp.org/" target="_blank">Deadly Connections Community and Justice Services Limited</a></h4>
+            <p class="service-text">Deadly Connections is a Aboriginal Community Led, Not For Profit Organisation that breaks the cycles of disadvantage and trauma to directly address the over-representation of Aboriginal people in the child protection and justice system/s.</p>
+          </div>
+
+          <div class="col-md-4 mb-4 text-center">
+            <img src="{{ url_for('static', filename='img/ims.png') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
+            <h4><a href="https://www.ims.org.au/" target="_blank">Illawarra Multicultural Services</a></h4>
+            <p class="service-text">IMS have been supporting culturally and linguistically diverse communities in the Illawarra since 1980, providing  assistance to migrants, humanitarian visa entrants, and refugees.</p>
+          </div>
+
+          <div class="col-md-4 mb-4 text-center">
             <img src="{{ url_for('static', filename='img/fcc.png') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
             <h4><a href="https://www.freecodecamp.org/" target="_blank">Free Code Camp</a></h4>
             <p class="service-text">Free Code Camp is an open source community that helps you learn to code, build pro bono projects for nonprofits, and get a job as a developer.</p>
           </div>
 
           <div class="col-md-4 mb-4 text-center">
-            <img src="{{ url_for('static', filename='img/vuemastery.png') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
+            <img src="{{ url_for('static', filename='img/vuemastery.jpg') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
             <h4><a href="https://www.vuemastery.com/pricing/?coupon=CODESYDNEY25" target="_blank">Vue Mastery</a></h4>
             <p class="service-text">Code.Sydney has an established relationship with Vue Mastery which allows us to get discounted rates for their excellent Vue training materials.</p>          
           </div>
@@ -353,31 +366,25 @@ Qj can usually be found deep in some obscure documentation or sharing his knowle
           </div>
 
           <div class="col-md-4 mb-4 text-center">
-            <img src="{{ url_for('static', filename='img/actura.png') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
+            <img src="{{ url_for('static', filename='img/actura_logo.jpg') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
             <h4><a href="http://www.actura.com.au/" target="_blank">Actura Australia</a></h4>
             <p class="service-text">Actura empowers youth to master the critical STEAM related skill sets for their future success.</p>
           </div>
 
           <div class="col-md-4 mb-4 text-center">
-            <img src="{{ url_for('static', filename='img/thelittlespace.png') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
+            <img src="{{ url_for('static', filename='img/thelittlespace.jpg') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
             <h4><a href="https://thelittlespace.com.au/" target="_blank">The Little Space</a></h4>
             <p class="service-text">The Little Space is a boutique co-working space in Bondi Junction. The home of Code.Sydney's Sunday trainings.</p>
           </div>
 
           <div class="col-md-4 mb-4 text-center">
-            <img src="{{ url_for('static', filename='img/legal123.png') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
+            <img src="{{ url_for('static', filename='img/legal123.jpg') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
             <h4><a href="http://www.1shoppingcart.com/app/?af=1687312" target="_blank">Legal123 Pty Ltd</a></h4>
             <p class="service-text">Legal123 Pty Ltd offers off-the-shelf legal templates perfect for startups.</p>
           </div>
 
           <div class="col-md-4 mb-4 text-center">
-            <img src="{{ url_for('static', filename='img/Calo.png') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
-            <h4><a href="http://www.caloservices.com/" target="_blank">CALO Services</a></h4>
-            <p class="service-text">CALO Services provides software solutions to fleet and education industry. Code.Sydney is helping CALO develop applications related to the education industry.</p>
-          </div>
-
-          <div class="col-md-4 mb-4 text-center">
-            <img src="{{ url_for('static', filename='img/webdesignerpro.png') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
+            <img src="{{ url_for('static', filename='img/webdesignerpro.jpg') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
             <h4><a href="https://thewebdesignerpro.com/" target="_blank">The Web Designer Pro</a></h4>
             <p class="service-text">Web Designer Pro is an agency which provides 3D rendering and animation.</p>
           </div>
