--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -25,91 +25,122 @@
 <br/>
 <div class="text-center">
   <h1 style="font-family:Montserrat;">
-    Code Sydney's Monthly Newsletter
+    Monthly Newsletter
   </h1>
 </div>
 
 <body><table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
             <tr>
+                <th>Publication ID</th>
                 <th>Month</th>
                 <th>Newsletter</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-              <td>November 2020</a></td>
+              <td>202012</td>
+              <td>2020 DECEMBER</td>
+              <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_December_2020.pdf') }}" target="_blank">The Hexagon December 2020</a></td>
+            </tr>
+            <tr>
+              <td>202011</td>
+              <td>2020 NOVEMBER</td>
               <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_November_2020.pdf') }}" target="_blank">The Hexagon November 2020</a></td>
             </tr>
             <tr>
-              <td>October 2020</a></td>
+              <td>202010</td>
+              <td>2020 OCTOBER</td>
               <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_October_2020.pdf') }}" target="_blank">The Hexagon October 2020</a></td>
             </tr>
             <tr>
-              <td>September 2020</a></td>
+              <td>202009</td>
+              <td>2020 SEPTEMBER</td>
               <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_September_2020.pdf') }}" target="_blank">The Hexagon September 2020</a></td>
             </tr>
             <tr>
-              <td>August 2020</a></td>
+              <td>202008</td>
+              <td>2020 AUGUST</td>
               <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_August_2020.pdf') }}" target="_blank">The Hexagon August 2020</a></td>
             </tr>
             <tr>
-              <td>July 2020</a></td>
+              <td>202007</td>
+              <td>2020 JULY</td>
               <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_July_2020.pdf') }}" target="_blank">The Hexagon July 2020</a></td>
             </tr>
             <tr>
-              <td>June 2020</a></td>
+              <td>202006</td>
+              <td>2020 JUNE</td>
               <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_June_2020.pdf') }}" target="_blank">The Hexagon June 2020</a></td>
             </tr>
             <tr>
-              <td>May 2020</a></td>
+              <td>202005</td>
+              <td>2020 MAY</td>
               <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_May_2020.pdf') }}" target="_blank">The Hexagon May 2020</a></td>
             </tr>
             <tr>
-              <td>April 2020</a></td>
+              <td>202004</td>
+              <td>2020 APRIL</td>
               <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_MayEOM_2020.pdf') }}" target="_blank">The Hexagon April 2020</a></td>
             </tr>
             <tr>
-                <td>March 2020</a></td>
-                <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_April_2020.pdf') }}" target="_blank">The Hexagon March 2020</a></td>
+              <td>202003</td>
+              <td>2020 MARCH</td>
+              <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_April_2020.pdf') }}" target="_blank">The Hexagon March 2020</a></td>
             </tr>
             <tr>
-                <td>February 2020</a></td>
-                <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_March_2020.pdf') }}" target="_blank">The Hexagon February 2020</a></td>
+              <td>202002</td>
+              <td>2020 FEBRUARY</td>
+              <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_March_2020.pdf') }}" target="_blank">The Hexagon February 2020</a></td>
             </tr>
             <tr>
-                <td>January 2020</a></td>
-                <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_February_2020.pdf') }}" target="_blank">The Hexagon January 2020</a></td>
+              <td>202001</td>
+              <td>2020 JANUARY</td>
+              <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_February_2020.pdf') }}" target="_blank">The Hexagon January 2020</a></td>
             </tr>
             <tr>
-                <td>December 2020</a></td>
-                <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_January_2020.pdf') }}" target="_blank">The Hexagon December 2020</a></td>
+              <td>201912</td>
+              <td>2019 DECEMBER</td>
+              <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_January_2020.pdf') }}" target="_blank">The Hexagon December 2019</a></td>
             </tr>
             <tr>
-                <td>November 2019</a></td>
-                <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_December_2019.pdf') }}" target="_blank">The Hexagon November 2019</a></td>
+              <td>201911</td>
+              <td>2019 NOVEMBER</td>
+              <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_December_2019.pdf') }}" target="_blank">The Hexagon November 2019</a></td>
             </tr>
             <tr>
-                <td>October 2019</a></td>
-                <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_November_2019.pdf') }}" target="_blank">The Hexagon October 2019</a></td>
+              <td>201910</td>
+              <td>2019 OCTOBER</td>
+              <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_November_2019.pdf') }}" target="_blank">The Hexagon October 2019</a></td>
             </tr>
             <tr>
-                <td>September 2019</a></td>
-                <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_October_2019.pdf') }}" target="_blank">The Hexagon September 2019</a></td>
+              <td>201909</td>
+              <td>2019 SEPTEMBER</td>
+              <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_October_2019.pdf') }}" target="_blank">The Hexagon September 2019</a></td>
             </tr>
             <tr>
-                <td>August 2019</a></td>
-                <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_September_2019.pdf') }}" target="_blank">The Hexagon August 2019</a></td>
+              <td>201908</td>
+              <td>2019 AUGUST</td>
+              <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_September_2019.pdf') }}" target="_blank">The Hexagon August 2019</a></td>
             </tr>
             <tr>
-                <td>July 2019</a></td>
-                <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_August_2019.pdf') }}" target="_blank">The Hexagon July 2019</a></td>
+              <td>201907</td>
+              <td>2019 JULY</td>
+              <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_August_2019.pdf') }}" target="_blank">The Hexagon July 2019</a></td>
             </tr>
             <tr>
-                <td>June 2019</a></td>
-                <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_July_2019.pdf') }}" target="_blank">The Hexagon June 2019</a></td>
+              <td>201906</td>
+              <td>2019 JUNE</td>
+              <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_July_2019.pdf') }}" target="_blank">The Hexagon June 2019</a></td>
             </tr>
         </tbody>
+        <tfoot>
+          <tr>
+              <th>Publication ID</th>
+              <th>Month</th>
+              <th>Newsletter</th>
+          </tr>
+        </tfoot>
     </table>
     <script src="static/js/jquery.min.js"></script>
     <script src="static/bootstrap/js/bootstrap.min.js"></script>
@@ -117,6 +148,18 @@
     <script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js"></script>
 </body>
-  <!-- Opend Ends -->
+<!-- Opend Ends -->
+<script src="static/js/jquery.min.js"></script>
+<script src="static/bootstrap/js/bootstrap.min.js"></script>
+<script src="static/js/smart-forms.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+<script src="https://cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js"></script>
+<script>
+  $(document).ready(function() {
+    $('#example').DataTable( {
+        "order": [[ 0, "desc" ]]
+    } );
+  });
+</script>
 
 {% endblock content %}
