--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,15 +1,18 @@
 body {
-  margin-top: 105px; }
+  margin-top: 105px;
+}
 
 .navbar {
   box-shadow: 2px 2px 5px #355878;
   opacity: 0.9;
-  background: #fff; }
-  .navbar .nav-item {
-    font-size: 1.4rem;
-    padding-right: 1.4rem; }
+  background: #fff;
+}
+.navbar .nav-item {
+  font-size: 1rem;
+  padding-right: 1rem;
+}
 
-.closer{
+.closer {
   margin-top: -3px;
 }
 
@@ -17,26 +20,29 @@ body {
   position: relative;
   background: url("../img/background.jpg") no-repeat;
   background-size: cover;
-  min-height: 600px; }
-  #showcase .primary-overlay {
-    background: rgba(53, 88, 120, 0.8);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%; }
+  min-height: 600px;
+}
+#showcase .primary-overlay {
+  background: rgba(53, 88, 120, 0.8);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 
 .info-header {
   width: 50%;
   margin: auto;
-  border-bottom: 1px #ddd solid; }
+  border-bottom: 1px #ddd solid;
+}
 
-.service-text{
+.service-text {
   font-size: 15px;
   text-align: left;
 }
 
-.team-text{
+.team-text {
   font-size: 13px;
   text-align: left;
 }
@@ -48,119 +54,119 @@ body {
 }
 */
 
-.thanks{
+.thanks {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
 }
 
-.move-up{
+.move-up {
   margin-top: -55px;
 }
 
-.move-up-more{
+.move-up-more {
   margin-top: -80px;
 }
 
-.spacing{
+.spacing {
   margin-top: 80px !important;
 }
 
-.top-spacing{
+.top-spacing {
   margin-top: 110px !important;
 }
 
-.bottom-spacing{
+.bottom-spacing {
   margin-bottom: 110px !important;
 }
 
-.thanks{
+.thanks {
   font-size: 40px;
   font-weight: bold;
 }
 
-.touch{
+.touch {
   font-size: 40px;
-  color: #F08B56;
+  color: #f08b56;
   font-weight: bold;
 }
 
-.no-deco{
+.no-deco {
   text-decoration: none;
   color: #fff;
 }
 
 .soc-media {
-   padding-left: 20px;
+  padding-left: 20px;
 }
 
-.no-deco:hover{
+.no-deco:hover {
   text-decoration: none;
   color: #fff;
 }
 
-.font-icon{
+.font-icon {
   text-decoration: none;
   color: white;
   font-size: 30px;
 }
 
-.meetup-hover:hover{
+.meetup-hover:hover {
   color: #e51937;
 }
 
-.linkedin-hover:hover{
-  color: #4875B4;
+.linkedin-hover:hover {
+  color: #4875b4;
 }
 
-.instagram-hover:hover{
+.instagram-hover:hover {
   color: #ffdc80;
 }
 
-.facebook-hover:hover{
-  color: #4875B4;
+.facebook-hover:hover {
+  color: #4875b4;
 }
 
-.github-hover:hover{
-  color: #00A9B0;
+.github-hover:hover {
+  color: #00a9b0;
 }
 
-.youtube-hover:hover{
-  color: #FF3333;
+.youtube-hover:hover {
+  color: #ff3333;
 }
 
-.freecodecamp-hover:hover{
-  color: #43631A;
+.freecodecamp-hover:hover {
+  color: #43631a;
 }
 
-.spacing-up{
+.spacing-up {
   margin-top: -15px !important;
 }
 
-.move-down{
+.move-down {
   margin-top: 20px;
   margin-bottom: 10px;
 }
 
-.achievement-size{
-    font-size: 1px;
+.achievement-size {
+  font-size: 1px;
 }
 
-.achievement-font{
-    font-size: 1px;
+.achievement-font {
+  font-size: 1px;
 }
 
-.go-up{
-    margin-top: -8px;
+.go-up {
+  margin-top: -8px;
 }
 
-.slide-up{
-    margin-top: -3px !important;
+.slide-up {
+  margin-top: -3px !important;
 }
 
-.blue-background{
-    background-color: #5BC9EB;
+.blue-background {
+  background-color: #5bc9eb;
 }
 
 .div-center {
@@ -171,18 +177,33 @@ body {
 }
 
 #authors img {
-  margin-top: -50px; }
+  margin-top: -50px;
+}
 #authors .card:hover {
   background: #355878;
-  color: #fff; }
+  color: #fff;
+}
 #authors .fab {
-  color: #fff; }
+  color: #fff;
+}
 
 @media (max-width: 768px) {
   #showcase {
-    min-height: 500px; }
-    #showcase h1 {
-      font-size: 4rem; }
+    min-height: 500px;
+  }
+  #showcase h1 {
+    font-size: 4rem;
+  }
 
   .mb-resp {
-    margin-bottom: 1rem; } }
+    margin-bottom: 1rem;
+  }
+}
+
+th {
+  font-size: 14px;
+}
+
+td {
+  font-size: 12px;
+}
