--- a/templates/contact.html
+++ b/templates/contact.html
@@ -27,13 +27,16 @@
       <div class="row">
 
         <div class="col-lg-12">
-          <h3>Book a 30-minute meeting</h3>
-          <!-- Calendly inline widget begin -->
-          <div class="calendly-inline-widget" data-url="https://calendly.com/codesydney" style="min-width:320px;height:630px;"></div>
-          <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
-          <!-- Calendly inline widget end -->
+          <h2>
+            <!-- Calendly link widget begin -->
+            <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
+            <script src="https://assets.calendly.com/assets/external/widget.js" type="text/javascript"></script>
+            <a href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/codesydney'});return false;">Click this to book a 30-minute Zoom meeting</a>
+            <!-- Calendly link widget end -->
+          </h2>
+          <br/>
+          <br/>  
         </div>
-
         <div class="col-lg-9">
           <h3>Get In Touch</h3>
             <div class="mb-3 closer">
