Added Lillian and tweaked Volunteering and Newsletter pages

--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,7 @@
               <h4>Engramar Bollas</h4>
               <h5 class="text-muted">Director</h5>
               <p class="team-text">Engramar's raison d'etre is to serve. A believer of servant leadership. He is passionate in providing service excellence to customers and ensuring people, culture, processes and technology support the same initiative.
-Engramar has worked in the IT industry for over 24 years. Having worked in Asia, the Middle East and Australia, Engramar has deep expertise in all aspects of software development lifecycle including business requirements analysis, systems design and development, product testing, release management, end-user training, pre-sales and post-implementation support.
+Engramar has worked in the IT industry for over 25 years. Having worked in Asia, the Middle East and Australia, Engramar has deep expertise in all aspects of software development lifecycle including business requirements analysis, systems design and development, product testing, release management, end-user training, pre-sales and post-implementation support.
 Engramar is working for GBG (Loqate) as Head of Customer Support. Engramar is also the current Director of Code.Sydney, an organisation which helps beginner programmers and novice data analysts showcase their newfound skills. Engramar has obtained a degree in Mathematics major in Computer Science from the Pontifical and Royal University of Santo Tomas in Manila.</p>
               <div class="d-flex justify-content-center">
                 <div class="p-4">
@@ -281,10 +281,11 @@ Qj can usually be found deep in some obscure documentation or sharing his knowle
   
       <div class="container">
         <div class="row">
+
+
           <div class="col-lg-3 col-md-6">
             <div class="card h-100">
               <div class="card-body">
-  
                 <img src="{{ url_for('static', filename='img/gabriel.jpg') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
                 <h4>Gabriel Djan</h4>
                 <h5 class="text-muted">Mentor</h5>
@@ -302,12 +303,30 @@ Qj can usually be found deep in some obscure documentation or sharing his knowle
                     </a>
                   </div>
                 </div>
-  
               </div>
             </div>
           </div>
 
-  
+          <div class="col-lg-3 col-md-6">
+            <div class="card h-100">
+              <div class="card-body">
+                <img src="{{ url_for('static', filename='img/lillian.jpg') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
+                <h4>Lillian Luzinsky</h4>
+                <h5 class="text-muted">Mentor</h5>
+                <p class="team-text">
+                  Lillian is a versatile Designer and Creative Technologist, with a keen eye for clean and elegant design throughout all her projects. She possesses a wide range of skills, including UX/UI Design, Motion Graphics and Software Engineering. Lillian absolutely loves CSS and making things look great and user-friendly. Before transitioning into Front End Development, Lillian spent time as a Graphic Designer for property marketing and later shifted into freelancing, where she has been building her own business for 13 years providing high quality design services. Due to her diverse abilities, she is highly proficient in collaborating and communicating with cross-functional teams, and loves learning and refining her programming skills.
+                </p>
+                <div class="d-flex justify-content-center">
+                  <div class="p-4">
+                    <a href="https://au.linkedin.com/in/lillian-luzinsky" target="_blank">
+                      <i class="fab fa-linkedin"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
   
