--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -32,7 +32,7 @@
 <body><table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
             <tr>
-                <th>Publication ID</th>
+                <th>Issue Number</th>
                 <th>Month</th>
                 <th>Newsletter</th>
             </tr>
