--- a/templates/jsstudygroup.html
+++ b/templates/jsstudygroup.html
@@ -29,7 +29,7 @@
 -->
 
 <br />
-<h3 style="margin-left: 100px; color: gray">JavaScript Leaderboard</h3>
+<h3 style="margin-left: 100px; color: gray">Learning Progress Tracker</h3>
 <p>
   <a
     href="{{ url_for('vueleaderboardlogin') }}"
