Added FCC RWD Certification

--- a/templates/vueleaderboardupdate.html
+++ b/templates/vueleaderboardupdate.html
@@ -186,6 +186,38 @@
           <td>{{ form.B30.label }}</td>
           <td>{{ form.B30 }}</td>
         </tr>
+        <tr>
+          <td>{{ form.C1.label }}</td>
+          <td>{{ form.C1 }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.C2.label }}</td>
+          <td>{{ form.C2 }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.C3.label }}</td>
+          <td>{{ form.C3 }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.C4.label }}</td>
+          <td>{{ form.C4 }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.C5.label }}</td>
+          <td>{{ form.C5 }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.C6.label }}</td>
+          <td>{{ form.C6 }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.C7.label }}</td>
+          <td>{{ form.C7 }}</td>
+        </tr>
+        <tr>
+          <td>{{ form.C8.label }}</td>
+          <td>{{ form.C8 }}</td>
+        </tr>
       </table>
       <br />
       <div style="font-size: 12px; margin-left: 100px">{{ form.Save }}</div>
