--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -39,6 +39,11 @@
         </thead>
         <tbody>
             <tr>
+              <td>202101</td>
+              <td>2021 JANUARY</td>
+              <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_January_2021.pdf') }}" target="_blank">The Hexagon January 2021</a></td>
+            </tr>
+            <tr>
               <td>202012</td>
               <td>2020 DECEMBER</td>
               <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_December_2020.pdf') }}" target="_blank">The Hexagon December 2020</a></td>
